[tool.poetry]
name = "mscom"
version = "0.1.0"
description = ""
authors = ["vitaly.legchilkin <vlegchilkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.1"
aiokafka = "^0.8.0"
structlog = "^23"
python-json-logger = "^2.0.1"
ujson = "^5.4.0"
SQLAlchemy = "^1.4.11"
async-timeout = "^4.0.2"
aiohttp = "^3.8.4"
ruamel-yaml = "^0.17.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "local"
url = "http://127.0.0.1:3141/root/local/"
priority = "explicit"